...
        sv.translatesAutoresizingMaskIntoConstraints = false
        return sv
    }()
    
    var cancelButton: UIButton = {
        let btn = UIButton()
        let emptyImage = UIImage(named: "emptyCancel")
        let filledImage = UIImage(named: "filledCancel")
        btn.setImage(emptyImage, for: .normal)
        btn.setImage(filledImage, for: .highlighted)
        btn.translatesAutoresizingMaskIntoConstraints = false
        return btn
    }()
...
