...
        return btn
    }()
    
    var buyButton: UIButton = {
        let btn = UIButton()
        btn.translatesAutoresizingMaskIntoConstraints = false
        let emptyImage = UIImage(named: "emptyBuy")
        let filledImage = UIImage(named: "filledBuy")
        btn.setImage(emptyImage, for: .normal)
        btn.setImage(filledImage, for: .highlighted)
        return btn
    }()
    
...
