...
class CatalogPresenter: CatalogOutputProtocol {
    let view: CatalogInputProtocol
    let router: RouterCatalogProtocol?
    var initialProducts: [CatalogProduct]?
    var products: [CatalogProduct]?
    var networkService: NetworkServiceProtocol!
    var _typesProducts: [String] = ["Filter", "All", "Clothes", "Shoes", "Accessories"]
    
    lazy var typesProducts: [String] = {
        return _typesProducts
    }()
    
    required init(view: CatalogInputProtocol, networkService: NetworkServiceProtocol, router: RouterCatalogProtocol) {
...
