...
    var catalogCollectionView: UICollectionView!
    var typeProductCollectionView: UICollectionView!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        setup()
        navigationItem.title = "One Shop"
        presenter.fetchProducts()
    }
    
    override func viewDidLayoutSubviews() {
        super.viewDidLayoutSubviews()
        layout()
...
        catalogCollectionView.leftAnchor.constraint(equalTo: self.view.leftAnchor, constant: 0).isActive = true
        catalogCollectionView.bottomAnchor.constraint(equalTo: self.view.bottomAnchor, constant: 0).isActive = true
        catalogCollectionView.rightAnchor.constraint(equalTo: self.view.rightAnchor, constant: 0).isActive = true
    }
    
    func presentFilterAlert() {
        let alert = UIAlertController(title: "Filter products", message: "Select the option that you want to filter the product by", preferredStyle: .actionSheet)
        let action1 = UIAlertAction(title: "From low price to high", style: .default) { [self] (_) in
            presenter.sortBy(type: .LowToHigh)
        }
        let action2 = UIAlertAction(title: "From high price to low", style: .default) { [self] (_) in
            presenter.sortBy(type: .HighToLow)
        }
        let action3 = UIAlertAction(title: "By product type", style: .default) { [self] (_) in
            presenter.sortBy(type: .TypeProduct)
        }
        alert.addAction(action1)
        alert.addAction(action2)
        alert.addAction(action3)
        present(alert, animated: true, completion: nil)
...
